fix login ui issue on mobile view

--- a/app/assets/stylesheets/application/login.sass
+++ b/app/assets/stylesheets/application/login.sass
@@ -12,6 +12,9 @@
   margin: 0 auto
   @media only screen and (max-width: 951px)
     padding-top: 0
+  @media only screen and (max-width: 450px)
+    padding-left: 20px
+    padding-right: 20px
 
   .loginLeftContent
     font-size: 14px
